# MCPServers

./: .gitignore  SYSTEM_PROMPT.md  mcp.json.example
gmat-prep-ai-mcp/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
gmat-prep-ai-mcp/data/: flt_format_patterns.json  score_percentiles.json  taxonomy.json
gmat-prep-ai-mcp/sandbox/: __init__.py  runner.py
gmat-prep-ai-mcp/scripts/: sync_taxonomy.mjs
gmat-prep-ai-mcp/standalone_prompts/: generate_prompts.py  prompt_domain_di_math.txt  prompt_domain_di_non_math.txt  prompt_domain_q_algebra.txt  prompt_domain_q_arithmetic.txt  prompt_section_di.txt  prompt_section_quant.txt  prompt_section_verbal.txt  prompt_skill_q_counting_sets_series.txt  prompt_skill_q_equal_unequal_alg.txt  prompt_skill_q_rates_ratios_percent.txt  prompt_skill_q_value_order_factors.txt  prompt_skill_v_analysis_critique.txt  prompt_skill_v_identify_inferred.txt  prompt_skill_v_identify_stated.txt  prompt_skill_v_plan_construct.txt  prompt_type_di_ds.txt  prompt_type_di_gt.txt  prompt_type_di_msr.txt  prompt_type_di_tpa.txt  prompt_type_q_pure_context.txt  prompt_type_q_real_context.txt  prompt_type_v_cr.txt  prompt_type_v_rc.txt
gmat-prep-ai-mcp/tests/: test_code_interpreter.py  test_difficulty.py  test_parse_flt.py  test_render_artifact.py  test_score_percentile.py  test_taxonomy.py  test_validate_question.py
gmat-prep-ai-mcp/tools/: __init__.py  _logging.py  code_interpreter.py  difficulty.py  parse_flt.py  render_artifact.py  score_percentile.py  taxonomy.py  validate_question.py
input-mcp/: README.md  main.py  pyproject.toml
input-mcp/docs/: HTTP_API.md
input-mcp/scripts/: kill_ui.py  test_ask.py
input-mcp/tools/: _logging.py  bootstrap.py  ipc.py  paths.py  prompts.py
input-mcp/ui_app/: __init__.py  __main__.py  dispatcher.py  icon.py  queue.py  server.py  theme.py  tray.py
kg-mcp/: README.md  (+2 more)
search-mcp/: README.md  main.py  pyproject.toml
search-mcp/tools/: _logging.py  file_search.py  kg_search.py  semantic.py  sqlite_query.py  web_search.py
sysops-mcp/: README.md  main.py  pyproject.toml
(+21 files in other folders)
