[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmat-prep-ai-mcp"
version = "0.1.0"
description = "MCP server with GMAT Prep AI tools - code interpreter, taxonomy, validation, charts, FLT parsing"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  # MCP Python SDK (Anthropic)
  "mcp>=1.0.0",
  # Math + numerics
  "sympy>=1.12",
  "numpy>=1.26",
  "pandas>=2.0",
  # Charts
  "matplotlib>=3.8",
  "Pillow>=10.0",
  "pytest>=9.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["tools*", "sandbox*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
