[project]
name = "sysops-mcp"
version = "0.1.0"
description = "MCP server for filesystem operations and shell command execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pydantic>=2.13.4",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.3",
    "reportlab>=4.5.0",
]
